created api -for save role, -for save users from csv file (/register) - created custom validation exception -created user and role services and user and role request and response

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,4 +12,8 @@ spring.jpa.properties.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNami
 # if true then it will show sql queries in log
 spring.jpa.show-sql = true
 
+## File Storage Properties
+# All files uploaded through the REST API will be stored in this directory
+file.upload-dir=Y:/digilitics/errorFile.csv
+
 server.port=8080
