created api for downloading errorFile (/download/{file})

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,6 +14,6 @@ spring.jpa.show-sql = true
 
 ## File Storage Properties
 # All files uploaded through the REST API will be stored in this directory
-file.upload-dir=Y:/digilitics/errorFile.csv
+file.upload-dir=Y:/digilitics/
 
 server.port=8080
