minor changes in UserServiceImpl business logic

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,4 +16,7 @@ spring.jpa.show-sql = true
 # All files uploaded through the REST API will be stored in this directory
 file.upload-dir=Y:/digilitics/
 
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
 server.port=8080
